--- a/profileStyles.css
+++ b/profileStyles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Share+Tech+Mono&display=swap');
+
 /* the html element selector means all of those elements */
 /* li {
     color:dodgerblue;
@@ -15,6 +17,8 @@ p, h3 {
     background-color: blueviolet;
     color: beige;
     width: 50vw;
+    min-width: 300px;
+    border: 2px solid darkmagenta;
 }
 
 /* class selectors */
@@ -24,28 +28,42 @@ p, h3 {
 
 /* wildcard selectors */
 * {
-    /* margin: 0px;
-    padding: 0px; */
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 body {
     background-color: rgb(194, 226, 194);
     color: rgb(4, 11, 104);
 
-    font-family: "Comic Sans MS", "Times New Roman", Impact, cursive;
+    font-family: 'Roboto', sans-serif;
+
+    font-family: 'Share Tech Mono', monospace;
     font-size: 1rem;
+
+    /* background-image:url("https://img.freepik.com/free-vector/elegant-business-shapes-transparent-background_1361-727.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; */
 }
 
-h1 {
+/* h1 {
     color: #ff0000;
-}
+} */
 
 .box-1 {
     background-color: rgba(255,255,255, 0.2);
+
+    margin-top: 5px;
+    margin-left: 1rem;
+    margin-right: 0px;
+    margin-bottom: 5px;
 }
 
 .box-2 {
     background-color: rgba(0,0,0, 0.2);
+    margin: 5px 2rem;
 }
 
 .floating-box {
@@ -55,4 +73,45 @@ h1 {
 .container {
     width: 80vw;
     margin: auto;
+}
+
+
+/* footer h4 - descendant */
+footer>h4 /* child */ {
+    font-weight: bolder;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+}
+
+label[for = "search"] {
+    text-transform: uppercase;
+}
+
+#search:focus {
+    outline: rgb(0, 255, 0) 4px solid;
+}
+
+a:visited {
+    color: initial;
+}
+
+a:hover {
+    cursor: crosshair;
+}
+
+.flex-container {
+    /* for my navbar */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 15vw;
+    border-bottom: 1px solid black;
+}
+
+.flex-container li {
+    list-style: none;
+    padding: 2px;
 }
